<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="ime_name">bestidear pinyin input method</string>
    <string name="ime_settings_activity_name">bestidear pinyin input method settings</string>
    <!-- version = apk(java) + ime engine + sys dict + [hotlist (TBD)] -->
    <string name="version">1.0.0</string>

    <!-- Used by the toggle keys in soft keyboards.-->
    <string name="toggle_cn">0</string>
    <string name="toggle_cn_cand">1</string>
    <string name="toggle_en_lower">2</string>
    <string name="toggle_en_upper">3</string>
    <string name="toggle_en_sym1">4</string>
    <string name="toggle_en_sym2">5</string>
    <string name="toggle_smiley">6</string>
    <string name="toggle_enter_go">7</string>
    <string name="toggle_enter_search">8</string>
    <string name="toggle_enter_send">9</string>
    <string name="toggle_enter_next">10</string>
    <string name="toggle_enter_done">11</string>
    <string name="toggle_row_cn">12</string>
    <string name="toggle_row_en">13</string>
    <string name="toggle_row_uri">14</string>
    <string name="toggle_row_emailaddress">15</string>
    <string name="toggle_phone_sym">3</string>

    <!-- settings related -->
    <string name="setting_sound_key">setting_sound_key</string>
    <string name="setting_vibrate_key">setting_vibrate_key</string>
    <string name="setting_prediction_key">setting_prediction_key</string>
    <string name="setting_switch_key">setting_switch_key</string>
    <string name="setting_advanced_key">setting_advanced_key</string>

	<string name="setting">Remote controller input method settings</string>
    <string name="setting_sound_key_title">Sound feedback</string>
    <string name="setting_vibrate_title">Vibrate when typing</string>
    <string name="setting_prediction_title">Input prediction</string>
    <string name="setting_switch_title">Chinese/English switch</string>
    <string name="setting_switch_shift_space_title">Shift-space</string>

    <string name="setting_enabled">Enabled</string>
    <string name="setting_disabled">Disabled</string>

    <string name="setting_others">Other settings</string>
    <string name="setting_others_summary">Dictionary synchronization</string>

    <string name="toggle_enter_go_label">Go</string>
    <string name="toggle_enter_send_label">Send</string>
    <string name="toggle_enter_next_label">Next</string>
    <string name="toggle_enter_done_label">Done</string>
    <string name="toggle_en_label">English</string>
    <string name="toggle_cn_label">Chinese</string>
    <string name="inputMethod">Input Method</string>
</resources>
