<?xml version="1.0" encoding="utf-8"?>

<keyboard
    skb_template="@xml/skb_shuyun_template"
    skb_cache_flag="true"
    qwerty="true"
    qwerty_uppercase="true"
    width="8%p"
    height="25%p"
    key_type="0"
    repeat="false"
    balloon="false">

    <row>
        <key label="" code="102" width="10%p" key_type="6" start_pos_x="1%p"/>
        <keys splitter="|"  labels="1|2|3|4|5|6|7|8|9|0" />
        <key label="" code="103" width="10%p" key_type="7"/>
    </row>
    <row>
        <key label="，" width="10%p"  key_type="1">
            <toggle_state state_id="@string/toggle_smiley" code="-6"
                icon="@drawable/smiley_icon"  icon_popup="@drawable/smiley_popup_icon"
                key_type="2"/>
            <toggle_state state_id="@string/toggle_en_lower" code="-1" label=" "
                icon_popup="@drawable/shift_off_popup_icon" key_type="2"/>
            <toggle_state state_id="@string/toggle_en_upper" code="-1" label=" "
                 icon_popup="@drawable/shift_on_popup_icon" key_type="3"/>
            <toggle_state state_id="@string/toggle_cn_cand" label="'"
                key_type="1"/>
        </key>
        <keys splitter="|"  labels="Q|W|E|R|T|Y|U|I|O|P"
            codes="45|51|33|46|48|53|49|37|43|44"/>
        <key id="3" width="10%p"/>
    </row>

    <row >
        <key id="6"/>
        <keys splitter="|" labels="A|S|D|F|G|H|J|K|L"
            codes="29|47|32|34|35|36|38|39|40"/>
        <key id="2" />

    </row>

    <row  row_id="@string/toggle_row_cn">

        <key code="-3" start_pos_x="0%p" start_pos_y="75%p"
            width="16%p" height="25%p" key_type="13" label=" "/>
        <keys splitter="|" labels="Z|X|C"
            codes="54|52|31"/>
        <key code="62" key_type="10"  label=" " width="28%p"/>
        <keys splitter="|" labels="V|B|N|M"
            codes="50|30|42|41" />

    </row>

    <row  row_id="@string/toggle_row_en" start_pos_y="75%p">
        <key code="-3" start_pos_x="0%p" start_pos_y="75%p"
            width="16%p" height="25%p" key_type="13" label=" "/>
        <keys splitter="|" labels="Z|X|C"
            codes="54|52|31"/>
        <key code="62" key_type="10" label=" "  width="28%p"/>
        <keys splitter="|" labels="V|B|N|M"
            codes="50|30|42|41" />

    </row>

    <row  row_id="@string/toggle_row_uri" start_pos_y="75%p">
        <key code="-3" start_pos_x="0%p" start_pos_y="75%p"
            width="16%p" height="25%p" key_type="13" label=" "/>
        <keys splitter="|" labels="Z|X|C"
            codes="54|52|31"/>
        <key code="62"  label=" " key_type="10" width="28%p"/>
        <keys splitter="|" labels="V|B|N|M"
            codes="50|30|42|41" />

    </row>

    <row  row_id="@string/toggle_row_emailaddress" start_pos_y="75%p">
        <key code="-3" start_pos_x="0%p" start_pos_y="75%p"
            width="16%p" height="25%p" key_type="13" label=" "/>
        <keys splitter="|" labels="Z|X|C"
            codes="54|52|31"/>
        <key code="62" key_type="10" label=" "  width="28%p"/>
        <keys splitter="|" labels="V|B|N|M"
            codes="50|30|42|41" />

    </row>
</keyboard>

