<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<keyboard
  skb_template="@xml/skb_template1"
  skb_cache_flag="true"
  qwerty="true"
  qwerty_uppercase="true"
  width="7.69%p"
  height="25%p"
  key_type="0"
  repeat="false"
  balloon="true">

  <row>
     <keys splitter="|" labels="1|2|3"/>
    <keys splitter="|"  labels="Q|W|E|R|T|Y|U|I|O|P"
      codes="45|51|33|46|48|53|49|37|43|44"/>
  </row>

  <row >
     <keys splitter="|" labels="4|5|6"/>
    <keys splitter="|" labels="A|S|D|F|G|H|J|K|L"
      codes="29|47|32|34|35|36|38|39|40"/>
    <key label="：">
      <toggle_state state_id="@string/toggle_en_sym1" label=":"/>
    </key>
  </row>

  <row >
    <keys splitter="|" labels="7|8|9" />  
    <key label="，" width="11.54%p" icon="@drawable/comma_full_popup_icon"
      icon_popup="@drawable/comma_full_popup_icon" key_type="1">
      <toggle_state state_id="@string/toggle_smiley" code="-6"
        icon="@drawable/smiley_icon" icon_popup="@drawable/smiley_popup_icon"
        key_type="2"/>
      <toggle_state state_id="@string/toggle_en_lower" code="-1"
        icon="@drawable/shift_off_popup_icon"
        icon_popup="@drawable/shift_off_popup_icon" key_type="2"/>
      <toggle_state state_id="@string/toggle_en_upper" code="-1"
        icon="@drawable/shift_on_popup_icon"
        icon_popup="@drawable/shift_on_popup_icon" key_type="3"/>
      <toggle_state state_id="@string/toggle_cn_cand" label="'"
        key_type="1"/>
    </key>
    <keys splitter="|" labels="Z|X|C|V|B|N|M"
      codes="54|52|31|50|30|42|41"/>
    <key id="3" width="11.54%p"/>
  </row>

  <row  row_id="@string/toggle_row_cn">
   <!-- <keys start_pos_x="0%p" splitter="|" labels=".|0"
      codes="56|7"/> --> 
     <key label="。"
      icon_popup="@drawable/period_full_popup_icon" key_type="1"/>
    <key label="0"></key>
    <key label="/" key_type="1"></key>
    <key code="-3" start_pos_x="26.07%p" start_pos_y="75%p"
      width="11.54%p" height="25%p" key_type="1" label=":-)"/>
    <key id="6"/>    
    <key code="62" key_type="5" width="30.608%p"/>
    
    <key id="1"/>
  </row>

  <row  row_id="@string/toggle_row_en" start_pos_y="75%p">
    <!-- <keys start_pos_x="0%p" splitter="|" labels=".|0"
      codes="56|7"/> --> 
    <key label="." key_type="1"></key>
    <key label="0"></key>
    <key label="/" key_type="1"></key>
    <key code="-3" start_pos_x="26.07%p" start_pos_y="75%p"
      width="11.54%p" height="25%p" key_type="1" label=":-)"/>
    <key id="6"/>    
    <key code="62" key_type="5" width="30.608%p"/>

    <key id="1"/>
  </row>

  <row  row_id="@string/toggle_row_uri" start_pos_y="75%p">
    <key label="." key_type="1"></key>
    <key label="0"></key>
    <key label="/" key_type="1"></key>
    <key code="-3" start_pos_x="24.07%p" start_pos_y="75%p"
      width="11.54%p" height="25%p" key_type="1" label=":-)"/>
    <key id="6"/>    
    <key code="62" key_type="5" width="30.608%p"/>
    <key id="1"/>
  </row>

  <row  row_id="@string/toggle_row_emailaddress" start_pos_y="75%p">
    <key label="." key_type="1"></key>
    <key label="0"></key>
    <key label="/" key_type="1"></key>
    <key code="-3" start_pos_x="24.07%p" start_pos_y="75%p"
      width="11.54%p" height="25%p" key_type="1" label=":-)"/>
    <key id="6"/>    
    <key code="62" key_type="5" width="30.608%p"/>
    <key id="1"/>
  </row>
</keyboard>

