<?xml version="1.0" encoding="utf-8"?>

<keyboard
    skb_template="@xml/skb_shuyun_template"
    skb_cache_flag="true"
    width="5%p"
    height="20%p"
    key_type="0"
    repeat="false"
    balloon="false">

    <row start_pos_x="16%p" start_pos_y="8%p">
        <key label="" code="102" width="9%p"  icon="@drawable/ic_key_l1"  start_pos_x="1%p"/>
        <key label="~" />
        <key label="！">
            <toggle_state state_id="@string/toggle_en_sym1" label="!"/>
        </key>
        <keys splitter="|" labels="\@|#"/>
        <key label="￥">
            <toggle_state state_id="@string/toggle_en_sym1" label="$"/>
        </key>
        <key label="£">
            <toggle_state state_id="@string/toggle_en_sym1" label="%"/>
        </key>
        <key label="€">
            <toggle_state state_id="@string/toggle_en_sym1" label="^"/>
        </key>
        <key label="®">
            <toggle_state state_id="@string/toggle_en_sym1" label="&amp;"/>
        </key>
        <key label="×">
            <toggle_state state_id="@string/toggle_en_sym1" label="*" />
        </key>
        <key label="，">
            <toggle_state state_id="@string/toggle_en_sym1" label=","/>
        </key>
        <key label="" code="103" width="9%p"  icon="@drawable/ic_key_r1" />
    </row>

    <row start_pos_x="16%p">
        <key icon="@drawable/ic_key_l2uper"  width="9%p"  key_type="1">
            <toggle_state state_id="@string/toggle_smiley" code="-6"
                icon="@drawable/smiley_icon"  icon_popup="@drawable/smiley_popup_icon"
                key_type="2"/>
            <toggle_state state_id="@string/toggle_en_lower" code="-1" label=" "
                icon_popup="@drawable/shift_off_popup_icon" key_type="2"/>
            <toggle_state state_id="@string/toggle_en_upper" code="-1" label=" "
                icon_popup="@drawable/shift_on_popup_icon" key_type="3"/>
            <toggle_state state_id="@string/toggle_cn_cand" label="'"
                key_type="1"/>
        </key>

        <key label="：">
            <toggle_state state_id="@string/toggle_en_sym1" label=":"/>
        </key>
        <key label="；">
            <toggle_state state_id="@string/toggle_en_sym1" label=";"/>
        </key>
        <keys splitter="|" labels="(|)"/>
        <key label="“">
            <toggle_state state_id="@string/toggle_en_sym1" label="&quot;"/>
        </key>
        <key label="”">
            <toggle_state state_id="@string/toggle_en_sym1" label="_"/>
        </key>
        <key label="。" key_type="0" icon="@drawable/period_full_icon"
            icon_popup="@drawable/period_full_popup_icon">
            <toggle_state state_id="@string/toggle_en_sym1" label="."
                icon="@drawable/period_icon" icon_popup="@drawable/period_popup_icon"/>
            <toggle_state state_id="@string/toggle_en_upper" label="."
                icon="@drawable/period_icon" icon_popup="@drawable/period_popup_icon"/>
        </key>
        <key label="？">
            <toggle_state state_id="@string/toggle_en_sym1" label="\?"/>
        </key>
        <key label="‘">
            <toggle_state state_id="@string/toggle_en_sym1" label="'"/>
        </key>
        <key label="’">
            <toggle_state state_id="@string/toggle_en_sym1" label="√"/>
        </key>


        <key  width="9%p" code="67" icon="@drawable/ic_key_del" label="X" balloon="false"
            repeat="true"/>
    </row>

    <row start_pos_x="16%p">
        <key id="6"/>
        <key label="—">
            <toggle_state state_id="@string/toggle_en_sym1" label="-"/>
        </key>
        <keys splitter="|" labels="+|="/>
        <key label="÷">
            <toggle_state state_id="@string/toggle_en_sym1" label="/"/>
        </key>
        <key label="【">
            <toggle_state state_id="@string/toggle_en_sym1" label="["/>
        </key>
        <key label="】">
            <toggle_state state_id="@string/toggle_en_sym1" label="]"/>
        </key>
        <key label="｛">
            <toggle_state state_id="@string/toggle_en_sym1" label="{"/>
        </key>
        <key label="｝">
            <toggle_state state_id="@string/toggle_en_sym1" label="}"/>
        </key>
　　　　　<key label="、">
        　<toggle_state state_id="@string/toggle_en_sym1" label="a"/>
    　　</key>　　　

        <key id="2"/>
    </row>

    <row  start_pos_x="16%p">
        <key code="-3"  icon="@drawable/ic_key_r2abc" width="14%p" />
        <key label="™"/>
        <key label="《">
            <toggle_state state_id="@string/toggle_en_sym1" label="&lt;"/>
        </key>
        <key label="》">
            <toggle_state state_id="@string/toggle_en_sym1" label="&gt;"/>
        </key>
        <key code="62"   width="19%p"/>
        <key label="|">
            <toggle_state state_id="@string/toggle_en_sym1" label="｜"/>
        </key>
        <keys splitter="|" labels="±|•|°"/>
    </row>
</keyboard>

