<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<keyboard
  skb_template="@xml/skb_template1"
  skb_cache_flag="true"
  width="7.69%p"
  height="25%p"
  key_type="0"
  repeat="false"
  balloon="true">

  <row>
    <keys splitter="|" labels="1|2|3"/>
   <keys splitter="|" labels="\@|#"/>
    <key label="￥">
      <toggle_state state_id="@string/toggle_en_sym1" label="$"/>
    </key>
    <keys splitter="|" labels="%|&quot;|*"/>
    <key label="—">
      <toggle_state state_id="@string/toggle_en_sym1" label="-"/>
    </key>
    <key label="、">
      <toggle_state state_id="@string/toggle_en_sym1" label="/"/>
    </key>
    <keys splitter="|" labels="(|)"/>
  </row>

  <row>
    <keys splitter="|" labels="4|5|6" />
    <key label="！">
      <toggle_state state_id="@string/toggle_en_sym1" label="!"/>
    </key>
    <key label="“">
      <toggle_state state_id="@string/toggle_en_sym1" label="&quot;"/>
    </key>
    <key label="：">
      <toggle_state state_id="@string/toggle_en_sym1" label=":"/>
    </key>
    <key label="；">
      <toggle_state state_id="@string/toggle_en_sym1" label=";"/>
    </key>
    <key label="，">
      <toggle_state state_id="@string/toggle_en_sym1" label=","/>
    </key>
    <key label="？">
      <toggle_state state_id="@string/toggle_en_sym1" label="\?"/>
    </key>
    <keys splitter="|" labels="_|="/>
    <key label="【">
      <toggle_state state_id="@string/toggle_en_sym2" label="["/>
    </key>
    <key label="】">
      <toggle_state state_id="@string/toggle_en_sym2" label="]"/>
    </key>
  </row>

  <row >
    <keys splitter="|" labels="7|8|9" />  
    <key code="-5" width="11.54%p" key_type="2" label="ALT"/>
    <key label="™"/>
    <key label="‘">
      <toggle_state state_id="@string/toggle_en_sym2" label="‘"/>
    </key>
    <key label="’">
      <toggle_state state_id="@string/toggle_en_sym2" label="’"/>
    </key>
    <keys splitter=" " labels="+ | \\ √"/>
    <key id="3"/>
  </row>

  <row key_type="1">
    <key label="。" 
      icon_popup="@drawable/period_full_popup_icon" key_type="1"/>
    <key label="0" key_type="0"></key>
    <key label="/" key_type="1"></key>
    <key code="-3" width="11.54%p" key_type="1" label="abc"/>
    <key code="-2" label="中 符" width="16.15%p" repeat="true">
      <toggle_state state_id="@string/toggle_en_sym1" label="英 符" code="-2"/>
    </key>    
    <key code="62" key_type="5" width="30.608%p"/>
    <key label="。" key_type="0" icon="@drawable/period_full_icon"
      icon_popup="@drawable/period_full_popup_icon">
      <toggle_state state_id="@string/toggle_en_sym1" label="."
        icon="@drawable/period_icon" icon_popup="@drawable/period_popup_icon"/>
      <toggle_state state_id="@string/toggle_en_upper" label="."
        icon="@drawable/period_icon" icon_popup="@drawable/period_popup_icon"/>
    </key>
    <key id="1"/>
  </row>
</keyboard>

